--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -15,7 +15,7 @@ on:
 jobs:
   deploy:
 
-    runs-on:  [self-hosted, linux, x64]
+    runs-on:  self-hosted
 
     steps:
     - uses: actions/checkout@v2
