--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,70 @@
-
+astroid==2.9.3
+attrs==21.4.0
+aws-sam-translator==1.42.0
+aws-xray-sdk==2.9.0
+boto3==1.21.4
+botocore==1.24.5
+certifi==2021.10.8
+cffi==1.15.0
+cfn-lint==0.58.1
+charset-normalizer==2.0.12; python_version >= '3'
+coverage==6.3.2
+cryptography==36.0.1
+docker==5.0.3
+ecdsa==0.17.0
+flake8==4.0.1
+future==0.18.2
+graphql-core==3.2.0
+icdiff==2.0.4
+idna==3.3
+iniconfig==1.1.1
+isort==5.10.1
+jinja2==3.0.3
+jmespath==0.10.0
+jschema-to-python==1.2.3
+jsondiff==1.3.1
+jsonpatch==1.32
+jsonpickle==2.1.0
+jsonpointer==2.2
+jsonschema==3.2.0
+junit-xml==1.9
+lazy-object-proxy==1.7.1
+markupsafe==2.1.0
+mccabe==0.6.1
+moto==3.0.4
+networkx==2.6.3
+packaging==21.3
+pbr==5.8.1
+platformdirs==2.5.1
+pluggy==1.0.0
+pprintpp==0.4.0
+py==1.11.0
+pyasn1==0.4.8
+pycodestyle==2.8.0
+pycparser==2.21
+pyflakes==2.4.0
+pylint==2.12.2
+pyparsing==3.0.7
+pyrsistent==0.18.1
+pytest-icdiff==0.5
+pytest-mock==3.7.0
+pytest-pythonpath==0.7.4
+pytest==6.2.5
+python-dateutil==2.8.2
+python-jose==3.3.0
+pytz==2021.3
+pyyaml==6.0
+requests==2.27.1
+responses==0.18.0
+rsa==4.8
+s3transfer==0.5.1
+sarif-om==1.0.4
+six==1.16.0
+sshpubkeys==3.3.1
+toml==0.10.2
+typing-extensions==4.1.1; python_version < '3.10'
+urllib3==1.26.8
+websocket-client==1.2.3
+werkzeug==2.0.3
+wrapt==1.13.3
+xmltodict==0.12.0
